[project]
name = "grimm-python-zero"
version = "0.1.0"
description = "Day-two teaching package for TheGrimmClub — your first Python class."
requires-python = ">=3.13"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["grimm"]
