[project]
name = "grimm-python-zero"
version = "0.1.0"
description = "Day-two teaching package for TheGrimmClub — your first Python class."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "TheGrimmClub" }]
keywords = ["teaching", "education", "beginner", "python", "grimm-club"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Education",
  "Topic :: Education",
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.urls]
Homepage = "https://github.com/TheGrimmClub/grimm__python__zero"
Repository = "https://github.com/TheGrimmClub/grimm__python__zero"
Documentation = "https://thegrimmclub.github.io/grimmoire/"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["grimm"]

[tool.pytest.ini_options]
# Flat layout: make `import grimm` work from the project root.
pythonpath = ["."]
testpaths = ["tests"]
